# prkt

./: .gitignore  .pre-commit-config.yaml  README.md
prkt/: pyproject.toml
prkt/prkt/: bbox.py  camera.py  detector.py  main.py  parking_space.py  utils.py
prkt/prkt/config/: config.yaml
