[tool.poetry]
name = "prkt"
version = "0.1.0"
description = ""
authors = ["Rybinsky <bar1noff.n@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
art = "^6.4"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
